--- a/CarRentApp/Src/Views/Users/Admin/AdminView.xaml
+++ b/CarRentApp/Src/Views/Users/Admin/AdminView.xaml
@@ -2,34 +2,87 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid Background="#F3F4F6">
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="600">
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
 
             <!-- Panel Title -->
-            <TextBlock Text="Admin Panel"
-                       FontSize="32"
-                       FontWeight="Bold"
-                       Foreground="#333"
-                       HorizontalAlignment="Center"
-                       Margin="0,0,0,20" />
+            <TextBlock Text="Administrator Panel"
+               FontSize="32"
+               FontWeight="Bold"
+               Foreground="#333"
+               HorizontalAlignment="Center"
+               Margin="0,0,0,20" />
 
             <!-- User Info -->
             <TextBlock x:Name="UserInfoTextBlock"
-                       FontSize="18"
-                       Foreground="#555"
-                       HorizontalAlignment="Center"
-                       Margin="0,0,0,20" />
+               FontSize="18"
+               Foreground="#555"
+               HorizontalAlignment="Center"
+               Margin="0,0,0,20" />
+
+            <!-- Tab Control -->
+            <TabControl Width="700" Height="450" Name="AdminTabControl">
+                <!-- Cars Tab -->
+                <TabItem Header="Users">
+                    <StackPanel Margin="10">
+                        <TextBlock Text="Users List" FontSize="20" FontWeight="Bold" Margin="0,0,0,10"/>
+                        <StackPanel Orientation="Horizontal" Margin="0,5">
+                            <TextBlock Text="Firstname:" Width="100" VerticalAlignment="Center"/>
+                            <TextBox x:Name="FirstnameTextBox" Width="300" />
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0,5">
+                            <TextBlock Text="Surname" Width="100" VerticalAlignment="Center"/>
+                            <TextBox x:Name="SurnameTextBox" Width="300" />
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0,5">
+                            <TextBlock Text="Email:" Width="100" VerticalAlignment="Center"/>
+                            <TextBox x:Name="EmailTextBox" Width="300" />
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0,5">
+                            <TextBlock Text="Role:" Width="100" VerticalAlignment="Center"/>
+                            <ComboBox x:Name="RoleComboBox" Width="300" SelectedIndex="0" />
+                        </StackPanel>
+                        <Button Content="Add User" Width="120" Height="30" Margin="0,10" HorizontalAlignment="Left"
+        Click="AddUser_Click"/>
+                        <Button Content="Refresh" Width="120" Height="30" Margin="0,10" HorizontalAlignment="Left"
+Click="Refresh_Click"/>
+                        <DataGrid x:Name="UserDataGrid"
+								  AutoGenerateColumns="False"
+								  Height="160"
+								  IsReadOnly="True"
+								  CanUserAddRows="False"
+								  CanUserDeleteRows="False"
+                                  SelectionChanged="DataGrid_SelectionChanged"
+                                  >
+                            <!-- Columns -->
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="*" />
+                                <DataGridTextColumn Header="Firstname" Binding="{Binding Name}" Width="*" />
+                                <DataGridTextColumn Header="Surname" Binding="{Binding Surname}" Width="*" />
+                                <DataGridTextColumn Header="Email" Binding="{Binding Email}" Width="*" />
+                                <DataGridTextColumn Header="Role" Binding="{Binding Role}" Width="*" />
+                            </DataGrid.Columns>
+                            <DataGrid.ContextMenu>
+                                <ContextMenu Name="UserContextMenu">
+                                    <MenuItem Header="Edit" Click="EditUser_Click"/>
+                                    <MenuItem Header="Delete" Click="DeleteUser_Click"/>
+                                </ContextMenu>
+                            </DataGrid.ContextMenu>
+                        </DataGrid>
+                    </StackPanel>
+                </TabItem>
+            </TabControl>
 
             <!-- Logout Button -->
             <Button Content="Logout"
-                Height="40"
-                Width="200"
-                Background="#0078D7"
-                Foreground="White"
-                FontWeight="Bold"
-                BorderThickness="0"
-                Margin="20,20,0,0"
-                HorizontalAlignment="Center"
-                Click="Logout_Click"/>
+            Height="40"
+            Width="200"
+            Background="#0078D7"
+            Foreground="White"
+            FontWeight="Bold"
+            BorderThickness="0"
+            Margin="20,20,0,0"
+            HorizontalAlignment="Center"
+            Click="Logout_Click"/>
         </StackPanel>
     </Grid>
 </UserControl>
