--- a/CarRentApp/Src/Views/Users/Mechanic/MechanicView.xaml
+++ b/CarRentApp/Src/Views/Users/Mechanic/MechanicView.xaml
@@ -1,23 +1,112 @@
 <UserControl x:Class="CarRentApp.Views.Users.Mechanic.MechanicView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Grid Background="#F3F4F6">
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="500">
+	<Grid Background="#F3F4F6">
+		<StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
 
-            <!-- Panel Title -->
-            <TextBlock Text="Mechanic Panel"
+			<!-- Panel Title -->
+			<TextBlock Text="Mechanic Panel"
                        FontSize="32"
                        FontWeight="Bold"
                        Foreground="#333"
                        HorizontalAlignment="Center"
                        Margin="0,0,0,20" />
 
-            <!-- User Info -->
-            <TextBlock x:Name="UserInfoTextBlock"
+			<!-- User Info -->
+			<TextBlock x:Name="UserInfoTextBlock"
                        FontSize="18"
                        Foreground="#555"
                        HorizontalAlignment="Center"
                        Margin="0,0,0,20" />
+
+			<!-- Tab Control -->
+			<TabControl Width="700" Height="450">
+				<!-- Cars Tab -->
+				<TabItem Header="Cars">
+					<Grid Background="White" Margin="5">
+						<StackPanel Margin="10">
+							<!-- Form to Add Car -->
+                            <TextBlock Text="Ongoing repairs" FontSize="20" FontWeight="Bold" Margin="0,0,0,10"/>
+                            <StackPanel Orientation="Horizontal" Margin="0,5">
+                                <TextBlock Text="Make:" Width="100" VerticalAlignment="Center"/>
+                                <ComboBox x:Name="MakeComboBox"
+											Width="300"
+											SelectedIndex="0"
+											SelectionChanged="FilterComboBox_SelectionChanged" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="0,5">
+                                <TextBlock Text="Model:" Width="100" VerticalAlignment="Center"/>
+                                <ComboBox x:Name="ModelComboBox"
+											Width="300"
+											SelectedIndex="0"
+											SelectionChanged="FilterComboBox_SelectionChanged" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="0,5">
+                                <TextBlock Text="Year:" Width="100" VerticalAlignment="Center"/>
+                                <ComboBox x:Name="YearComboBox"
+											Width="300"
+											SelectedIndex="0"
+											SelectionChanged="FilterComboBox_SelectionChanged" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="0,5">
+                                <TextBlock Text="Horse power:" Width="100" VerticalAlignment="Center"/>
+                                <ComboBox x:Name="HorsePowerComboBox"
+											Width="300"
+											SelectedIndex="0"
+											SelectionChanged="FilterComboBox_SelectionChanged" />
+                            </StackPanel>
+
+
+                            <Button Content="Set as repaired" Width="120" Height="30" Margin="0,10" HorizontalAlignment="Left"
+                                    Click="SetAsRepaired_Click"/>
+
+                            <!-- Car List -->
+							<DataGrid x:Name="CarDataGrid"
+									  AutoGenerateColumns="False"
+									  Height="160"
+									  IsReadOnly="True"
+									  CanUserAddRows="False"
+									  CanUserDeleteRows="False">
+
+								<!-- Style to color rows based on CarState -->
+								<DataGrid.RowStyle>
+									<Style TargetType="DataGridRow">
+										<Style.Triggers>
+											<!-- Available -->
+											<DataTrigger Binding="{Binding CarState}" Value="Available">
+												<Setter Property="Background" Value="#DFF0D8"/>
+											</DataTrigger>
+
+											<!-- Rented -->
+											<DataTrigger Binding="{Binding CarState}" Value="Rented">
+												<Setter Property="Background" Value="#D9D9D9"/>
+											</DataTrigger>
+
+											<!-- InService -->
+											<DataTrigger Binding="{Binding CarState}" Value="InService">
+												<Setter Property="Background" Value="#D9D9D9"/>
+											</DataTrigger>
+
+											<!-- Unavailable -->
+											<DataTrigger Binding="{Binding CarState}" Value="Unavailable">
+												<Setter Property="Background" Value="#D9D9D9"/>
+											</DataTrigger>
+										</Style.Triggers>
+									</Style>
+								</DataGrid.RowStyle>
+
+								<!-- Columns -->
+								<DataGrid.Columns>
+									<DataGridTextColumn Header="Make" Binding="{Binding Make}" Width="*" />
+									<DataGridTextColumn Header="Model" Binding="{Binding Model}" Width="*" />
+									<DataGridTextColumn Header="Year" Binding="{Binding Year}" Width="*" />
+									<DataGridTextColumn Header="Horse Power" Binding="{Binding HorsePower}" Width="*" />
+								</DataGrid.Columns>
+							</DataGrid>
+						</StackPanel>
+					</Grid>
+				</TabItem>
+			</TabControl>
 
 			<!-- Logout Button -->
 			<Button Content="Logout"
@@ -30,6 +119,6 @@
                     Margin="20,20,0,0"
                     HorizontalAlignment="Center"
                     Click="Logout_Click"/>
-        </StackPanel>
-    </Grid>
+		</StackPanel>
+	</Grid>
 </UserControl>
