--- a/CarRentApp/Src/Views/Auth/Login/LoginView.xaml
+++ b/CarRentApp/Src/Views/Auth/Login/LoginView.xaml
@@ -1,65 +1,87 @@
 <UserControl x:Class="CarRentApp.Views.Auth.Login.LoginView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-	<Grid Background="#F3F4F6">
-		<StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+    <Grid Background="#F3F4F6">
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+            <!-- Title -->
+            <TextBlock Text="Login"
+                 FontSize="28"
+                 FontWeight="Bold"
+                 Foreground="#333"
+                 HorizontalAlignment="Center"
+                 Margin="0,0,0,20" />
 
-			<!-- Title -->
-			<TextBlock Text="Login"
-                       FontSize="28"
-                       FontWeight="Bold"
-                       Foreground="#333"
-                       HorizontalAlignment="Center"
-                       Margin="0,0,0,20" />
+            <!-- Email Field -->
+            <TextBlock Text="E-mail"
+                 FontSize="14"
+                 Foreground="#555"
+                 Margin="0,5,0,0"/>
+            <TextBox x:Name="EmailTextBox"
+               Height="30"
+               BorderBrush="#0078D7"
+               BorderThickness="1"
+               Padding="5" />
 
-			<!-- Email Field -->
-			<TextBlock Text="E-mail"
-                       FontSize="14"
-                       Foreground="#555"
-                       Margin="0,5,0,0"/>
-			<TextBox x:Name="EmailTextBox"
-                     Height="30"
-                     BorderBrush="#0078D7"
-                     BorderThickness="1"
-                     Padding="5" />
+            <!-- Password Field -->
+            <TextBlock Text="Password"
+                 FontSize="14"
+                 Foreground="#555"
+                 Margin="0,10,0,0"/>
+            <PasswordBox x:Name="PasswordBox"
+                   Height="30"
+                   BorderBrush="#0078D7"
+                   BorderThickness="1"
+                   Padding="5" />
 
-			<!-- Password Field -->
-			<TextBlock Text="Password"
-                       FontSize="14"
-                       Foreground="#555"
-                       Margin="0,10,0,0"/>
-			<PasswordBox x:Name="PasswordBox"
-                         Height="30"
-                         BorderBrush="#0078D7"
-                         BorderThickness="1"
-                         Padding="5" />
+            <!-- Login Button -->
+            <Button Content="Sign In"
+              Height="40"
+              Width="200"
+              Margin="0,20,0,0"
+              Background="#0078D7"
+              Foreground="White"
+              FontWeight="Bold"
+              BorderThickness="0"
+              HorizontalAlignment="Center"
+              Click="Login_Click"/>
 
-			<!-- Login Button -->
-			<Button Content="Sign In"
-                    Height="40"
-					Width="200"
-                    Margin="0,20,0,0"
-                    Background="#0078D7"
-                    Foreground="White"
-                    FontWeight="Bold"
-                    BorderThickness="0"
-                    HorizontalAlignment="Center"
-					Click="Login_Click"/>
+            <!-- Debug Buttons (for testing only) -->
+            <StackPanel x:Name="DebugPanel" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
+                <Button Content="Customer Login"
+                        Height="30"
+                        Width="140"
+                        Margin="5,0"
+                        Click="CustomerLoginButton_Click"/>
+                <Button Content="Employee Login"
+                        Height="30"
+                        Width="140"
+                        Margin="5,0"
+                        Click="EmployeeLoginButton_Click"/>
+                <Button Content="Mechanic Login"
+                        Height="30"
+                        Width="140"
+                        Margin="5,0"
+                        Click="MechanicLoginButton_Click"/>
+                <Button Content="Admin Login"
+                        Height="30"
+                        Width="140"
+                        Margin="5,0"
+                        Click="AdminLoginButton_Click"/>
+            </StackPanel>
 
-			<!-- Navigation to Register -->
-			<TextBlock Text="Do not have an account?"
-                       FontSize="16"
-                       Foreground="#555"
-                       HorizontalAlignment="Center"
-                       Margin="0,20,0,5"/>
-
-			<TextBlock Text="Register here"
-                       FontSize="16"
-                       Foreground="#0078D7"
-                       HorizontalAlignment="Center"
-                       Cursor="Hand"
-                       TextDecorations="none"
-                       MouseLeftButtonUp="SwitchToRegisterView" />
-		</StackPanel>
-	</Grid>
+            <!-- Navigation to Register -->
+            <TextBlock Text="Do not have an account?"
+                 FontSize="16"
+                 Foreground="#555"
+                 HorizontalAlignment="Center"
+                 Margin="0,20,0,5"/>
+            <TextBlock Text="Register here"
+                 FontSize="16"
+                 Foreground="#0078D7"
+                 HorizontalAlignment="Center"
+                 Cursor="Hand"
+                 TextDecorations="none"
+                 MouseLeftButtonUp="SwitchToRegisterView" />
+        </StackPanel>
+    </Grid>
 </UserControl>
