--- a/CarRentApp/Src/Views/Users/Customer/CustomerView.xaml
+++ b/CarRentApp/Src/Views/Users/Customer/CustomerView.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid Background="#F3F4F6">
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="400">
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
 
             <!-- Panel Title -->
             <TextBlock Text="Customer Panel"
@@ -20,24 +20,25 @@
                        TextAlignment="Center"
                        Margin="0,0,0,20" />
 
-            <TabControl Width="700" Height="450">
+            <TabControl Height="450" Width="700">
                 <TabItem Header="Rent">
                     <Grid Background="White" Margin="5">
+                        <StackPanel Margin="10">
+                            <TextBlock Text="Pick a car for rent:" FontSize="20" FontWeight="Bold" Margin="0,0,0,10"/>
+                        </StackPanel>
                     </Grid>
                 </TabItem>
                 <TabItem Header="History">
                     <Grid Background="White" Margin="5">
-                        <StackPanel Margin="10">
+                        <StackPanel Margin="10" CanHorizontallyScroll="True">
                             <TextBlock Text="Rented cars" FontSize="20" FontWeight="Bold" Margin="0,0,0,10"/>
                             
                             <DataGrid x:Name="RequestsDataGrid"
                                       AutoGenerateColumns="False"
                                       IsReadOnly="True"
-                                      SelectionMode="Single"
-                                      Height="300"
+                                      Height="Auto"
                                       CanUserAddRows="False"
                                       CanUserDeleteRows="False"
-                                      Margin="0,0,0,10"
                                       RowBackground="#DFF0D8">
                                 
                                 <DataGrid.Columns>
@@ -45,7 +46,7 @@
                                     <DataGridTextColumn Header="Car ID" Binding="{Binding CarId}" Width="*" />
                                     <DataGridTextColumn Header="Start Date" Binding="{Binding StartDate}" Width="*" />
                                     <DataGridTextColumn Header="End Date" Binding="{Binding EndDate}" Width="*" />
-                                    <DataGridTextColumn Header="Accepted" Binding="{Binding IsAccepted}" Width="*" />
+                                    <DataGridTextColumn Header="Accepted" Binding="{Binding IsAccepted}" Width="*"/>
                                 </DataGrid.Columns>
                             </DataGrid>
                         </StackPanel>
