--- a/CarRentApp/Src/Views/Users/Customer/CustomerView.xaml
+++ b/CarRentApp/Src/Views/Users/Customer/CustomerView.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid Background="#F3F4F6">
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="400">
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
 
             <!-- Panel Title -->
             <TextBlock Text="Customer Panel"
@@ -20,6 +20,77 @@
                        TextAlignment="Center"
                        Margin="0,0,0,20" />
 
+            <TabControl Height="450" Width="700">
+                <TabItem Header="Rent">
+                    <Grid Background="White" Margin="5">
+                        <StackPanel Margin="10">
+                            <TextBlock Text="Pick a car for rent:" FontSize="20" FontWeight="Bold" Margin="0,0,0,10"/>
+                            
+                            <!-- Car List -->
+                            <DataGrid x:Name="CarDataGrid"
+                                      AutoGenerateColumns="False"
+                                      SelectionMode="Single"
+                                      Height="160"
+                                      IsReadOnly="True"
+                                      CanUserAddRows="False"
+                                      CanUserDeleteRows="False">
+
+                                <!-- Style to color rows based on CarState -->
+                                <DataGrid.RowStyle>
+                                    <Style TargetType="DataGridRow">
+                                        <Style.Triggers>
+                                            <!-- Available -->
+                                            <DataTrigger Binding="{Binding CarState}" Value="Available">
+                                                <Setter Property="Background" Value="#DFF0D8"/>
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </DataGrid.RowStyle>
+
+                                <!-- Columns -->
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn Header="Make" Binding="{Binding Make}" Width="*" />
+                                    <DataGridTextColumn Header="Model" Binding="{Binding Model}" Width="*" />
+                                    <DataGridTextColumn Header="Year" Binding="{Binding Year}" Width="*" />
+                                    <DataGridTextColumn Header="Horse Power" Binding="{Binding HorsePower}" Width="*" />
+                                    <DataGridTextColumn Header="Car State" Binding="{Binding CarState}" Width="*" />
+                                </DataGrid.Columns>
+                            </DataGrid>
+                            
+                            <!-- Buttons for Actions -->
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                                <Button Content="Rent" Width="100" Margin="5" Click="RentRequest_Click"/>
+                            </StackPanel>
+                        </StackPanel>
+                    </Grid>
+                </TabItem>
+                
+                <TabItem Header="History">
+                    <Grid Background="White" Margin="5">
+                        <StackPanel Margin="10" CanHorizontallyScroll="True">
+                            <TextBlock Text="Rented cars" FontSize="20" FontWeight="Bold" Margin="0,0,0,10"/>
+                            
+                            <DataGrid x:Name="RequestsDataGrid"
+                                      AutoGenerateColumns="False"
+                                      IsReadOnly="True"
+                                      Height="Auto"
+                                      CanUserAddRows="False"
+                                      CanUserDeleteRows="False"
+                                      RowBackground="#DFF0D8">
+                                
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn Header="Car Make" Binding="{Binding CarMake}" Width="*" />
+                                    <DataGridTextColumn Header="Car Model" Binding="{Binding CarModel}" Width="*" />
+                                    <DataGridTextColumn Header="Car Year" Binding="{Binding CarYear}" Width="*" />
+                                    <DataGridTextColumn Header="Start Date" Binding="{Binding StartDate}" Width="*" />
+                                    <DataGridTextColumn Header="End Date" Binding="{Binding EndDate}" Width="*" />
+                                </DataGrid.Columns>
+                            </DataGrid>
+                        </StackPanel>
+                    </Grid>
+                </TabItem>
+            </TabControl>
+            
             <!-- Logout Button -->
 			<Button Content="Logout"
                     Height="40"
