--- a/CarRentApp/Src/Views/Users/Mechanic/MechanicView.xaml
+++ b/CarRentApp/Src/Views/Users/Mechanic/MechanicView.xaml
@@ -2,34 +2,143 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid Background="#F3F4F6">
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="500">
-
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
             <!-- Panel Title -->
             <TextBlock Text="Mechanic Panel"
-                       FontSize="32"
-                       FontWeight="Bold"
-                       Foreground="#333"
-                       HorizontalAlignment="Center"
-                       Margin="0,0,0,20" />
+                 FontSize="32"
+                 FontWeight="Bold"
+                 Foreground="#333"
+                 HorizontalAlignment="Center"
+                 Margin="0,0,0,20" />
 
             <!-- User Info -->
             <TextBlock x:Name="UserInfoTextBlock"
-                       FontSize="18"
-                       Foreground="#555"
-                       HorizontalAlignment="Center"
-                       Margin="0,0,0,20" />
+                 FontSize="18"
+                 Foreground="#555"
+                 HorizontalAlignment="Center"
+                 Margin="0,0,0,20" />
 
-			<!-- Logout Button -->
-			<Button Content="Logout"
-                    Height="40"
-                    Width="200"
-                    Background="#0078D7"
-                    Foreground="White"
-                    FontWeight="Bold"
-                    BorderThickness="0"
-                    Margin="20,20,0,0"
-                    HorizontalAlignment="Center"
-                    Click="Logout_Click"/>
+            <!-- Tab Control -->
+            <TabControl Width="700" Height="450">
+                <!-- Ongoing Repairs Tab -->
+                <TabItem Header="Ongoing repairs">
+                    <Grid Background="White" Margin="5">
+                        <StackPanel Margin="10">
+                            <!-- Form/Filters -->
+                            <TextBlock Text="Ongoing repairs" FontSize="20" FontWeight="Bold" Margin="0,0,0,10"/>
+                            <StackPanel Orientation="Horizontal" Margin="0,5">
+                                <TextBlock Text="Make:" Width="100" VerticalAlignment="Center"/>
+                                <ComboBox x:Name="MakeComboBox"
+                          Width="300"
+                          SelectedIndex="0"
+                          SelectionChanged="FilterComboBox_SelectionChanged" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="0,5">
+                                <TextBlock Text="Model:" Width="100" VerticalAlignment="Center"/>
+                                <ComboBox x:Name="ModelComboBox"
+                          Width="300"
+                          SelectedIndex="0"
+                          SelectionChanged="FilterComboBox_SelectionChanged" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="0,5">
+                                <TextBlock Text="Year:" Width="100" VerticalAlignment="Center"/>
+                                <ComboBox x:Name="YearComboBox"
+                          Width="300"
+                          SelectedIndex="0"
+                          SelectionChanged="FilterComboBox_SelectionChanged" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="0,5">
+                                <TextBlock Text="Horse power:" Width="100" VerticalAlignment="Center"/>
+                                <ComboBox x:Name="HorsePowerComboBox"
+                          Width="300"
+                          SelectedIndex="0"
+                          SelectionChanged="FilterComboBox_SelectionChanged" />
+                            </StackPanel>
+
+                            <Button Content="Set as repaired" Width="120" Height="30" Margin="0,10" HorizontalAlignment="Left"
+                      Click="SetAsRepaired_Click"/>
+
+                            <!-- Ongoing repairs list (e.g. cars in service) -->
+                            <DataGrid x:Name="CarDataGrid"
+                        AutoGenerateColumns="False"
+                        Height="160"
+                        IsReadOnly="True"
+                        CanUserAddRows="False"
+                        CanUserDeleteRows="False">
+                                <DataGrid.RowStyle>
+                                    <Style TargetType="DataGridRow">
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding CarState}" Value="Available">
+                                                <Setter Property="Background" Value="#DFF0D8"/>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding CarState}" Value="Rented">
+                                                <Setter Property="Background" Value="#D9D9D9"/>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding CarState}" Value="InService">
+                                                <Setter Property="Background" Value="#D9D9D9"/>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding CarState}" Value="Unavailable">
+                                                <Setter Property="Background" Value="#D9D9D9"/>
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </DataGrid.RowStyle>
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn Header="Make" Binding="{Binding Make}" Width="*" />
+                                    <DataGridTextColumn Header="Model" Binding="{Binding Model}" Width="*" />
+                                    <DataGridTextColumn Header="Year" Binding="{Binding Year}" Width="*" />
+                                    <DataGridTextColumn Header="Horse Power" Binding="{Binding HorsePower}" Width="*" />
+                                </DataGrid.Columns>
+                            </DataGrid>
+                        </StackPanel>
+                    </Grid>
+                </TabItem>
+
+                <!-- Repairs Tab -->
+                <TabItem Header="Repairs">
+                    <Grid Background="White" Margin="5">
+                        <StackPanel Margin="10">
+                            <TextBlock Text="Repaired Vehicles" FontSize="20" FontWeight="Bold" Margin="0,0,0,10"/>
+                            <!-- Repairs DataGrid -->
+                            <DataGrid x:Name="RepairsDataGrid"
+                        AutoGenerateColumns="False"
+                        IsReadOnly="True"
+                        SelectionMode="Single"
+                        Height="300"
+                        CanUserAddRows="False"
+                        CanUserDeleteRows="False"
+                        Margin="0,0,0,10">
+                                <DataGrid.RowStyle>
+                                    <Style TargetType="DataGridRow">
+                                        <Setter Property="Background" Value="#F0F0F0"/>
+                                    </Style>
+                                </DataGrid.RowStyle>
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn Header="Repair ID" Binding="{Binding Id}" Width="*" />
+                                    <!-- Using the Car navigation property to show make and model -->
+                                    <DataGridTextColumn Header="Car" Binding="{Binding Car.Make}" Width="*" />
+                                    <DataGridTextColumn Header="Model" Binding="{Binding Car.Model}" Width="*" />
+                                    <DataGridTextColumn Header="Repair Date" Binding="{Binding RepairDate, StringFormat=\{0:yyyy-MM-dd\}}" Width="*" />
+                                    <DataGridTextColumn Header="Total Cost" Binding="{Binding TotalCost, StringFormat=C}" Width="*" />
+                                    <DataGridTextColumn Header="Summary" Binding="{Binding RepairSummary}" Width="2*"/>
+                                </DataGrid.Columns>
+                            </DataGrid>
+                        </StackPanel>
+                    </Grid>
+                </TabItem>
+            </TabControl>
+
+            <!-- Logout Button -->
+            <Button Content="Logout"
+              Height="40"
+              Width="200"
+              Background="#0078D7"
+              Foreground="White"
+              FontWeight="Bold"
+              BorderThickness="0"
+              Margin="20,20,0,0"
+              HorizontalAlignment="Center"
+              Click="Logout_Click"/>
         </StackPanel>
     </Grid>
 </UserControl>
